# zentinel

./: .gitignore  AGENTS_ROADMAP.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  MANIFESTO.md  PROJECT_SUMMARY.md  README.md  SECURITY.md  ZENTINEL_MIGRATION_ROADMAP.md  docker-compose.test.yml  docker-compose.yml  install.sh  mise.toml  rust-toolchain.toml
_archived/agents/auth-agent/: Cargo.toml
_archived/agents/auth-agent/src/: main.rs
_archived/agents/lua-agent/: Cargo.toml  README.md
_archived/agents/lua-agent/src/: config.rs  main.rs  stdlib.rs
_archived/agents/ratelimit/: Cargo.toml
_archived/agents/ratelimit/src/: main.rs
_archived/agents/waf/: Cargo.toml  README.md  build.rs  wrapper.h
_archived/agents/waf/src/: config.rs  main.rs  modsec_wrapper.c  modsecurity.rs
agent-template/: .gitignore  Cargo.toml  README.md  cargo-generate.toml  sentinel-agent.toml
agent-template/src/: main.rs
agents/data-masking/: Cargo.toml  zentinel-agent.toml
agents/data-masking/src/: handler.rs  lib.rs  main.rs
agents/data-masking/src/masking/: engine.rs  fpe.rs
agents/data-masking/src/parsers/: xml.rs
agents/denylist/: Cargo.toml
agents/echo/: Cargo.toml  sentinel-agent.toml  zentinel-agent.toml
agents/echo/src/: main.rs
agents/wasm-allowlist/: Cargo.toml
agents/wasm-allowlist/src/: lib.rs
crates/agent-protocol/: Cargo.toml  README.md  build.rs
crates/agent-protocol/benches/: hot_path.rs
crates/agent-protocol/docs/: README.md  api.md  architecture.md  errors.md  examples.md  handler.md  performance-roadmap.md  protocol.md
crates/agent-protocol/docs/v1/: api.md  examples.md  protocol.md
crates/agent-protocol/docs/v2/: api.md  benchmark-results.md  pooling.md  protocol.md  reverse-connections.md  transports.md
crates/agent-protocol/proto/: agent.proto  agent_v2.proto
crates/agent-protocol/src/: buffer_pool.rs  client.rs  headers.rs  lib.rs  mmap_buffer.rs  protocol.rs  server.rs
crates/agent-protocol/src/v2/: client.rs  observability.rs  pool.rs  protocol_metrics.rs  reverse.rs  server.rs  uds.rs  uds_server.rs
crates/agent-protocol/tests/: reverse_connection_test.rs  v2_integration.rs
crates/common/: Cargo.toml  README.md
crates/common/docs/: errors.md  identifiers.md  limits.md  observability.md  patterns.md  types.md
crates/common/src/: budget.rs  circuit_breaker.rs  errors.rs  ids.rs  inference.rs  lib.rs  limits.rs  observability.rs  registry.rs  scoped_metrics.rs  scoped_registry.rs  types.rs
crates/config/: Cargo.toml  README.md
crates/config-inspect/: Cargo.toml
crates/config-inspect/src/: graph.rs  heuristics.rs  lib.rs  shadow.rs
crates/config-inspect/src/render/: dot.rs  json.rs  mermaid.rs  mod.rs  text.rs
crates/config/docs/: examples.md  kdl-format.md  schema.md  validation.md
crates/config/examples/: validate_examples.rs
crates/config/src/: agents.rs  defaults.rs  filters.rs  flatten.rs  kdl_parser.rs  lib.rs  multi_file.rs  namespace.rs  observability.rs  resolution.rs  routes.rs  server.rs  upstreams.rs  validation.rs  waf.rs
crates/config/src/kdl/: circuitbreaker_helper.rs  filters.rs  helpers.rs  mod.rs  namespace.rs  retrypolicy_helper.rs  routes.rs  server.rs  upstreams.rs
crates/config/src/multi_file/: builder.rs  directory.rs  loader.rs  mod.rs  parsers.rs
crates/config/src/validate/: agents.rs  certs.rs  lint.rs  mod.rs  network.rs
crates/gateway/: Cargo.toml
crates/gateway/docs/: conformance.md  migration-from-nginx-ingress.md
crates/gateway/src/: config_writer.rs  controller.rs  embedded.rs  leader.rs  lib.rs  main.rs  metrics.rs  policies.rs  tls.rs  translator.rs
crates/gateway/src/reconcilers/: backend_tls.rs  gateway.rs  gateway_class.rs  grpcroute.rs  httproute.rs  ingress.rs  mod.rs  reference_grant.rs  tcproute.rs  tlsroute.rs
crates/gateway/tests/: conformance.rs
crates/playground-wasm/: Cargo.toml  README.md  test.html
crates/playground-wasm/src/: lib.rs
crates/proxy/: Cargo.toml  README.md  build.rs
crates/proxy/docs/: acme.md  agents.md  architecture.md  bundle.md  deployment.md  examples.md  inference.md  modules.md  rate-limiting.md  sticky-sessions.md
crates/proxy/src/: agents.rs  app.rs  builtin_handlers.rs  cache.rs  decompression.rs  discovery.rs  disk_cache.rs  distributed_rate_limit.rs  geo_filter.rs  grpc_health.rs  health.rs  http3.rs  http_helpers.rs  hybrid_cache.rs  kubeconfig.rs  lib.rs  logging.rs  main.rs  memcached_rate_limit.rs  memory_cache.rs  metrics.rs  metrics_server.rs  otel.rs  proxy.rs  rate_limit.rs  reload.rs  request.rs  response.rs  routing.rs  scoped_circuit_breaker.rs  scoped_rate_limit.rs  scoped_routing.rs  shadow.rs  static_files.rs  tls.rs  tls_metrics.rs  trace_id.rs  types.rs  upstream.rs  validation.rs  (+1 more)
crates/proxy/src/acme/: client.rs  error.rs  mod.rs  scheduler.rs
crates/proxy/src/agents/: agent.rs  agent_v2.rs  context.rs  decision.rs  manager.rs  metrics.rs  mod.rs  pool.rs
crates/proxy/src/bundle/: commands.rs  fetch.rs  install.rs  lock.rs  mod.rs  status.rs
crates/proxy/src/errors/: mod.rs
crates/proxy/src/inference/: budget.rs  cost.rs  guardrails.rs  manager.rs  metrics.rs  mod.rs  providers.rs  rate_limit.rs  streaming.rs  tokens.rs
crates/proxy/src/proxy/: context.rs  fallback.rs  fallback_metrics.rs  filters.rs  handlers.rs  http_trait.rs  mod.rs  model_routing.rs  (+1 more)
crates/proxy/tests/: acme_dns01_test.rs  acme_startup_test.rs  distributed_rate_limit_test.rs  integration.rs  mtls_upstream_integration_test.rs  service_types_test.rs  tls_mtls_test.rs  tls_sni_test.rs  websocket_test.rs
crates/sim/: Cargo.toml  README.md
crates/sim/docs/: api.md  load-balancing.md  matching.md
crates/sim/src/: agents.rs  lib.rs  matcher.rs  stateful.rs  types.rs  upstream.rs
crates/stack/: Cargo.toml  README.md
crates/stack/src/: main.rs
crates/wasm-runtime/: Cargo.toml
crates/wasm-runtime/docs/: README.md  architecture.md  building-agents.md  configuration.md  wit-interface.md
crates/wasm-runtime/src/: component.rs  host.rs  lib.rs  runtime.rs
crates/wasm-runtime/wit/: zentinel-agent.wit
(+387 files in other folders)
