[workspace]
members = [
    "crates/proxy",
    "crates/agent-protocol",
    "crates/config",
    "crates/common",
    "crates/stack",
    "crates/wasm-runtime",
    "agents/echo",
    "agents/data-masking",
]
exclude = [
    # WASM crates are built separately with wasm-pack
    "crates/sim",
    "crates/playground-wasm",
    "agents/wasm-allowlist",
]
resolver = "2"

[workspace.package]
version = "0.4.11"
edition = "2021"
authors = ["Sentinel Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/raskell-io/sentinel"
homepage = "https://github.com/raskell-io/sentinel"
rust-version = "1.85"

[workspace.dependencies]
# Core dependencies (using our fork with security fixes)
pingora = { git = "https://github.com/raskell-io/pingora.git", rev = "5847d5e", features = ["proxy", "lb", "rustls"] }
pingora-core = { git = "https://github.com/raskell-io/pingora.git", rev = "5847d5e", features = ["rustls"] }
pingora-http = { git = "https://github.com/raskell-io/pingora.git", rev = "5847d5e" }
pingora-proxy = { git = "https://github.com/raskell-io/pingora.git", rev = "5847d5e" }
pingora-load-balancing = { git = "https://github.com/raskell-io/pingora.git", rev = "5847d5e" }
pingora-timeout = { git = "https://github.com/raskell-io/pingora.git", rev = "5847d5e" }
pingora-limits = { git = "https://github.com/raskell-io/pingora.git", rev = "5847d5e" }
pingora-cache = { git = "https://github.com/raskell-io/pingora.git", rev = "5847d5e" }
pingora-memory-cache = { git = "https://github.com/raskell-io/pingora.git", rev = "5847d5e" }

# Async runtime
# Minimal feature set for proxy workloads (trimmed from "full" for smaller binary)
tokio = { version = "1.49", features = [
    "rt-multi-thread",  # Multi-threaded runtime
    "net",              # TCP/UDP networking
    "io-util",          # AsyncRead/AsyncWrite utilities
    "time",             # Timeouts and intervals
    "sync",             # Channels, mutexes, semaphores
    "signal",           # Unix signal handling (SIGTERM, SIGHUP)
    "fs",               # File operations (config reload)
    "macros",           # #[tokio::main] and #[tokio::test]
] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
kdl = "6.0"
miette = { version = "7.4", features = ["fancy"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = "0.14"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# IPC and protocol
prost = "0.14"
tonic = { version = "0.14", features = ["transport", "tls-ring", "tls-native-roots"] }
bytes = "1.9"

# Configuration and validation
config = "0.14"
validator = { version = "0.20", features = ["derive"] }

# Testing
proptest = "1.10"
criterion = "0.8"
insta = "1.46"

# Security
rustls = { version = "0.23", features = ["aws-lc-rs"] }
rustls-pemfile = "2.2"

# HTTP
http = "1.2"
hyper = "1.5"
tower = "0.5"

# Utilities
uuid = { version = "1.20", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.1"
parking_lot = "0.12"
arc-swap = "1.7"
base64 = "0.22"

# Memory allocator (better performance for allocation-heavy workloads)
tikv-jemallocator = "0.6"

[profile.release]
opt-level = 3
lto = "fat"              # Full LTO for maximum optimization
codegen-units = 1        # Single codegen unit for better cross-crate optimization
strip = true             # Strip symbols for smaller binary
debug = false            # No debug info in release
panic = "abort"          # Abort on panic (smaller binary, no unwinding)

[profile.release-with-debug]
inherits = "release"
strip = false
debug = true

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 2
debug = true

[profile.bench]
opt-level = 3
debug = false

