[workspace]
members = [
    "crates/proxy",
    "crates/agent-protocol",
    "crates/config",
    "crates/common",
    "crates/gateway",
    "crates/stack",
    "crates/wasm-runtime",
    "agents/echo",
    "agents/data-masking",
]
exclude = [
    # WASM crates are built separately with wasm-pack
    "crates/sim",
    "crates/playground-wasm",
    "crates/config-inspect",
    "agents/wasm-allowlist",
]
resolver = "2"

[workspace.package]
version = "0.6.10"
edition = "2021"
authors = ["Zentinel Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/zentinelproxy/zentinel"
homepage = "https://github.com/zentinelproxy/zentinel"
rust-version = "1.94.1"

[workspace.dependencies]
# Core dependencies (using our fork with security fixes, rebased on 0.8.0)
pingora = { version = "0.8.0", git = "https://github.com/zentinelproxy/pingora.git", rev = "f351da3", features = ["proxy", "lb", "rustls"] }
pingora-core = { version = "0.8.0", git = "https://github.com/zentinelproxy/pingora.git", rev = "f351da3", features = ["rustls"] }
pingora-http = { version = "0.8.0", git = "https://github.com/zentinelproxy/pingora.git", rev = "f351da3" }
pingora-proxy = { version = "0.8.0", git = "https://github.com/zentinelproxy/pingora.git", rev = "f351da3" }
pingora-load-balancing = { version = "0.8.0", git = "https://github.com/zentinelproxy/pingora.git", rev = "f351da3" }
pingora-timeout = { version = "0.8.0", git = "https://github.com/zentinelproxy/pingora.git", rev = "f351da3" }
pingora-limits = { version = "0.8.0", git = "https://github.com/zentinelproxy/pingora.git", rev = "f351da3" }
pingora-cache = { version = "0.8.0", git = "https://github.com/zentinelproxy/pingora.git", rev = "f351da3" }
pingora-memory-cache = { version = "0.8.0", git = "https://github.com/zentinelproxy/pingora.git", rev = "f351da3" }

# Async runtime
# Minimal feature set for proxy workloads (trimmed from "full" for smaller binary)
tokio = { version = "1.51", features = [
    "rt-multi-thread",  # Multi-threaded runtime
    "net",              # TCP/UDP networking
    "io-util",          # AsyncRead/AsyncWrite utilities
    "time",             # Timeouts and intervals
    "sync",             # Channels, mutexes, semaphores
    "signal",           # Unix signal handling (SIGTERM, SIGHUP)
    "fs",               # File operations (config reload)
    "macros",           # #[tokio::main] and #[tokio::test]
] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
kdl = "6.0"
miette = { version = "7.4", features = ["fancy"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = "0.14"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# IPC and protocol
prost = "0.14"
tonic = { version = "0.14", features = ["transport", "tls-ring", "tls-native-roots"] }
bytes = "1.9"

# Configuration and validation
config = "0.14"
validator = { version = "0.20", features = ["derive"] }

# Testing
proptest = "1.11"
criterion = "0.8"
insta = "1.47"

# Security
rustls = { version = "0.23", features = ["aws-lc-rs"] }
rustls-pemfile = "2.2"

# HTTP
http = "1.2"
hyper = "1.9"
tower = "0.5"

# Utilities
uuid = { version = "1.23", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.1"
parking_lot = "0.12"
arc-swap = "1.9"
base64 = "0.22"

# Memory allocator (better performance for allocation-heavy workloads)
tikv-jemallocator = "0.6"

[profile.release]
opt-level = 3
lto = "fat"              # Full LTO for maximum optimization
codegen-units = 1        # Single codegen unit for better cross-crate optimization
strip = true             # Strip symbols for smaller binary
debug = false            # No debug info in release
panic = "abort"          # Abort on panic (smaller binary, no unwinding)

[profile.release-with-debug]
inherits = "release"
strip = false
debug = true

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 2
debug = true

[profile.bench]
opt-level = 3
debug = false

