[package]
name = "sentinel-echo-agent"
version = "0.1.1"
edition = "2021"
authors = ["Sentinel Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/raskell-io/sentinel"
homepage = "https://github.com/raskell-io/sentinel"
description = "Echo agent for Sentinel reverse proxy - echoes request metadata as headers"
keywords = ["proxy", "reverse-proxy", "agent", "echo", "testing"]
categories = ["network-programming"]

[[bin]]
name = "sentinel-echo-agent"
path = "src/main.rs"

[dependencies]
# Local dependencies
sentinel-agent-protocol = { path = "../../crates/agent-protocol", version = "0.1.1" }
sentinel-common = { path = "../../crates/common", version = "0.1.1" }

# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Command line
clap = { version = "4.5", features = ["derive", "env"] }

[dev-dependencies]
tempfile = "3.12"
