[package]
name = "zentinel-echo-agent"
version = "0.5.0"
edition = "2021"
authors = ["Zentinel Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/zentinelproxy/zentinel"
homepage = "https://github.com/zentinelproxy/zentinel"
description = "Echo agent for Zentinel reverse proxy - echoes request metadata as headers"
keywords = ["proxy", "reverse-proxy", "agent", "echo", "testing"]
categories = ["network-programming"]

[[bin]]
name = "zentinel-echo-agent"
path = "src/main.rs"

[dependencies]
# Local dependencies
zentinel-agent-protocol = { path = "../../crates/agent-protocol", version = "0.5.0" }
zentinel-common = { path = "../../crates/common", version = "0.5.0" }

# Async runtime
tokio = { version = "1.49", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Utilities
uuid = { version = "1.21", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Command line
clap = { version = "4.5", features = ["derive", "env"] }

[dev-dependencies]
tempfile = "3.25"
