[package]
name = "zentinel-wasm-allowlist"
version = "0.4.1"
edition = "2021"
authors = ["Zentinel Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/zentinelproxy/zentinel"
description = "Example WASM agent for path-based allowlist/denylist"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "s"      # Optimize for size
lto = true           # Link-time optimization
