[package]
name = "sentinel-agent-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Agent protocol and IPC for Sentinel reverse proxy external processors"
keywords = ["proxy", "reverse-proxy", "agent", "protocol", "ipc"]
categories = ["network-programming"]

[features]
default = []
# Enable binary (MessagePack) serialization for UDS transport
binary-uds = ["rmp-serde"]

[dependencies]
# Local crates
sentinel-common = { path = "../common", version = "0.3.1" }

# Protocol and serialization
prost = { workspace = true }
tonic = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = "0.11"
rmp-serde = { version = "1.3", optional = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# HTTP
http = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
base64 = { workspace = true }
dashmap = { workspace = true }
smallvec = { version = "1.13", features = ["serde"] }

# Unix sockets
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"
futures = "0.3"

# Tracing
tracing = { workspace = true }

[build-dependencies]
# Use 0.12.3 to match tonic 0.12 workspace dependency
tonic-build = "0.12.3"

[dev-dependencies]
tempfile = "3.12"
criterion = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "hot_path"
harness = false
