[package]
name = "zentinel-agent-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Agent protocol and IPC for Zentinel reverse proxy external processors"
keywords = ["proxy", "reverse-proxy", "agent", "protocol", "ipc"]
categories = ["network-programming"]

[features]
default = []
# Enable binary (MessagePack) serialization for UDS transport
binary-uds = ["rmp-serde"]
# Enable memory-mapped buffers for large request/response bodies
mmap-buffers = ["memmap2", "dep:tempfile"]

[dependencies]
# Local crates
zentinel-common = { path = "../common", version = "0.5.1" }

# Protocol and serialization
prost = { workspace = true }
tonic = { workspace = true }
tonic-prost = "0.14"
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = "0.11"
rmp-serde = { version = "1.3", optional = true }
memmap2 = { version = "0.9", optional = true }
tempfile = { version = "3.25", optional = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# HTTP
http = { workspace = true }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json"] }

# TLS (for custom certificate verification)
rustls = { workspace = true }
hyper-rustls = { version = "0.27", default-features = false, features = ["ring", "http2", "tls12"] }
hyper-util = { version = "0.1", features = ["client-legacy", "tokio"] }
tokio-rustls = "0.26"

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
base64 = { workspace = true }
dashmap = { workspace = true }
smallvec = { version = "1.13", features = ["serde"] }

# Unix sockets
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"
futures = "0.3"

# Tracing
tracing = { workspace = true }

[build-dependencies]
tonic-prost-build = "0.14"

[dev-dependencies]
tempfile = "3.25"
criterion = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "hot_path"
harness = false
