[package]
name = "sentinel-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Common utilities and types for Sentinel reverse proxy"
keywords = ["proxy", "reverse-proxy", "utilities"]
categories = ["network-programming"]

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["sync"] }

# Logging and tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
prometheus = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP
http = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }

# System metrics
sysinfo = "0.31"

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
insta = { workspace = true }
