[package]
name = "sentinel-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Configuration loading and validation for Sentinel reverse proxy"
keywords = ["proxy", "reverse-proxy", "configuration", "kdl", "toml"]
categories = ["config", "network-programming"]

[dependencies]
# Local crates
sentinel-common = { path = "../common", version = "0.4.3", default-features = false }

# Configuration formats
kdl = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.9"

# Validation
validator = { workspace = true }
miette = { workspace = true }
tokio = { workspace = true, optional = true }
pem = { version = "3.0", optional = true }
x509-parser = { version = "0.18", optional = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# File globbing (not WASM-compatible)
glob = { version = "0.3", optional = true }

# File watching for hot reload (not WASM-compatible)
notify = { version = "8.2", optional = true }

# Path handling (not WASM-compatible)
directories = { version = "6.0", optional = true }

# Environment variables (not WASM-compatible)
envy = { version = "0.4", optional = true }

# Schema validation (not WASM-compatible - pulls in getrandom)
jsonschema = { version = "0.41", optional = true }

# Utilities
once_cell = "1.20"
parking_lot = { workspace = true }
arc-swap = { workspace = true }

# URL parsing
url = "2.5"

[features]
default = ["runtime"]
# Runtime features - not available in WASM
runtime = ["glob", "notify", "directories", "envy", "jsonschema"]
# TLS validation - requires runtime
validation = ["runtime", "tokio", "pem", "x509-parser"]

[dev-dependencies]
tempfile = "3.25"
insta = { workspace = true }
proptest = { workspace = true }
