[package]
name = "zentinel-playground-wasm"
version = "0.5.1"
edition = "2021"
authors = ["Zentinel Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/zentinelproxy/zentinel"
homepage = "https://github.com/zentinelproxy/zentinel"
rust-version = "1.85"
description = "WebAssembly bindings for Zentinel config playground"
keywords = ["proxy", "wasm", "playground", "configuration"]
categories = ["wasm", "simulation"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Local crates
zentinel-sim = { path = "../sim", version = "0.5.1" }

# WASM bindings
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"

# Serialization (explicit versions for standalone build)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Console error handling for debugging
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["console_error_panic_hook"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"      # Optimize for size
lto = true           # Link-time optimization

[package.metadata.wasm-pack.profile.release]
wasm-opt = false     # Disable wasm-opt due to bulk memory issues
